glang.output
Terminals unused in grammar

    SLINE_COMMENT
    OPEN_MLINE_COMMENT
    CLOSE_MLINE_COMMENT
    MODULO
    FUNCTION


Grammar

    0 $accept: program $end

    1 program: function

    2 function: function stmt
    3         | ε

    4 function_call: VAR LPAREN expr_list RPAREN

    5 expr_list: expr
    6          | expr_list COMMA expr

    7 type: INT
    8     | FLOAT
    9     | DOUBLE

   10 stmt: SEMICOLON
   11     | expr SEMICOLON
   12     | print_statement
   13     | scan_statement
   14     | declaration
   15     | assignment
   16     | while_statement
   17     | if_statement
   18     | block_stmt

   19 $@1: ε

   20 block_stmt: LBRACE $@1 stmt_list RBRACE

   21 stmt_list: stmt
   22          | stmt_list stmt

   23 scan_statement: SCAN expr SEMICOLON

   24 print_statement: PRINT expr SEMICOLON

   25 assignment: VAR ASSIGN expr SEMICOLON

   26 declaration: INT VAR ASSIGN expr SEMICOLON
   27            | FLOAT VAR ASSIGN expr SEMICOLON
   28            | DOUBLE VAR ASSIGN expr SEMICOLON
   29            | INT VAR SEMICOLON
   30            | FLOAT VAR SEMICOLON
   31            | DOUBLE VAR SEMICOLON
   32            | function_declaration

   33 function_declaration: INT VAR LPAREN parameter_list RPAREN block_stmt_func
   34                     | FLOAT VAR LPAREN parameter_list RPAREN block_stmt_func
   35                     | DOUBLE VAR LPAREN parameter_list RPAREN block_stmt_func
   36                     | INT VAR LPAREN RPAREN block_stmt_func
   37                     | FLOAT VAR LPAREN RPAREN block_stmt_func
   38                     | DOUBLE VAR LPAREN RPAREN block_stmt_func

   39 block_stmt_func: LBRACE RETURN expr SEMICOLON RBRACE

   40 parameter_list: type VAR
   41               | parameter_list COMMA type VAR

   42 while_statement: WHILE LPAREN expr RPAREN stmt

   43 if_statement: IF LPAREN expr RPAREN stmt
   44             | IF LPAREN expr RPAREN stmt ELSE stmt

   45 expr: function_call
   46     | INT_VAL
   47     | FLOAT_VAL
   48     | DOUBLE_VAL
   49     | VAR
   50     | MINUS expr
   51     | expr PLUS expr
   52     | expr MINUS expr
   53     | expr MULTIPLY expr
   54     | expr DIVIDE expr
   55     | expr LESS expr
   56     | expr GREATER expr
   57     | expr GREATEREQUAL expr
   58     | expr LESSEQUAL expr
   59     | expr NOTEQUAL expr
   60     | expr EQUAL expr
   61     | LPAREN INT RPAREN expr
   62     | LPAREN FLOAT RPAREN expr
   63     | LPAREN DOUBLE RPAREN expr
   64     | LPAREN expr RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    VAR <sval> (258) 4 25 26 27 28 29 30 31 33 34 35 36 37 38 40 41 49
    INT_VAL <iVal> (259) 46
    FLOAT_VAL <fVal> (260) 47
    DOUBLE_VAL <dVal> (261) 48
    INT (262) 7 26 29 33 36 61
    FLOAT (263) 8 27 30 34 37 62
    DOUBLE (264) 9 28 31 35 38 63
    IF (265) 43 44
    WHILE (266) 42
    PRINT (267) 24
    SCAN (268) 23
    RETURN (269) 39
    SLINE_COMMENT (270)
    OPEN_MLINE_COMMENT (271)
    CLOSE_MLINE_COMMENT (272)
    LPAREN (273) 4 33 34 35 36 37 38 42 43 44 61 62 63 64
    RPAREN (274) 4 33 34 35 36 37 38 42 43 44 61 62 63 64
    LBRACE (275) 20 39
    RBRACE (276) 20 39
    COMMA (277) 6 41
    SEMICOLON (278) 10 11 23 24 25 26 27 28 29 30 31 39
    ASSIGN (279) 25 26 27 28
    MODULO (280)
    IFX (281)
    ELSE (282) 44
    PLUS (283) 51
    MINUS (284) 50 52
    MULTIPLY (285) 53
    DIVIDE (286) 54
    EQUAL (287) 60
    NOTEQUAL (288) 59
    LESSEQUAL (289) 58
    GREATEREQUAL (290) 57
    LESS (291) 55
    GREATER (292) 56
    UMINUS (293)
    FUNCTION (294)


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    program (41)
        on left: 1
        on right: 0
    function (42)
        on left: 2 3
        on right: 1 2
    function_call <node> (43)
        on left: 4
        on right: 45
    expr_list <node> (44)
        on left: 5 6
        on right: 4 6
    type <iVal> (45)
        on left: 7 8 9
        on right: 40 41
    stmt <node> (46)
        on left: 10 11 12 13 14 15 16 17 18
        on right: 2 21 22 42 43 44
    block_stmt <node> (47)
        on left: 20
        on right: 18
    $@1 (48)
        on left: 19
        on right: 20
    stmt_list <node> (49)
        on left: 21 22
        on right: 20 22
    scan_statement <node> (50)
        on left: 23
        on right: 13
    print_statement <node> (51)
        on left: 24
        on right: 12
    assignment <node> (52)
        on left: 25
        on right: 15
    declaration <node> (53)
        on left: 26 27 28 29 30 31 32
        on right: 14
    function_declaration <node> (54)
        on left: 33 34 35 36 37 38
        on right: 32
    block_stmt_func <node> (55)
        on left: 39
        on right: 33 34 35 36 37 38
    parameter_list <node> (56)
        on left: 40 41
        on right: 33 34 35 41
    while_statement <node> (57)
        on left: 42
        on right: 16
    if_statement <node> (58)
        on left: 43 44
        on right: 17
    expr <node> (59)
        on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
        on right: 5 6 11 23 24 25 26 27 28 39 42 43 44 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64


State 0

    0 $accept: • program $end

    $default  reduce using rule 3 (function)

    program   go to state 1
    function  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: function •
    2 function: function • stmt

    VAR         shift, and go to state 4
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    INT         shift, and go to state 8
    FLOAT       shift, and go to state 9
    DOUBLE      shift, and go to state 10
    IF          shift, and go to state 11
    WHILE       shift, and go to state 12
    PRINT       shift, and go to state 13
    SCAN        shift, and go to state 14
    LPAREN      shift, and go to state 15
    LBRACE      shift, and go to state 16
    SEMICOLON   shift, and go to state 17
    MINUS       shift, and go to state 18

    $default  reduce using rule 1 (program)

    function_call         go to state 19
    stmt                  go to state 20
    block_stmt            go to state 21
    scan_statement        go to state 22
    print_statement       go to state 23
    assignment            go to state 24
    declaration           go to state 25
    function_declaration  go to state 26
    while_statement       go to state 27
    if_statement          go to state 28
    expr                  go to state 29


State 3

    0 $accept: program $end •

    $default  accept


State 4

    4 function_call: VAR • LPAREN expr_list RPAREN
   25 assignment: VAR • ASSIGN expr SEMICOLON
   49 expr: VAR •

    LPAREN  shift, and go to state 30
    ASSIGN  shift, and go to state 31

    $default  reduce using rule 49 (expr)


State 5

   46 expr: INT_VAL •

    $default  reduce using rule 46 (expr)


State 6

   47 expr: FLOAT_VAL •

    $default  reduce using rule 47 (expr)


State 7

   48 expr: DOUBLE_VAL •

    $default  reduce using rule 48 (expr)


State 8

   26 declaration: INT • VAR ASSIGN expr SEMICOLON
   29            | INT • VAR SEMICOLON
   33 function_declaration: INT • VAR LPAREN parameter_list RPAREN block_stmt_func
   36                     | INT • VAR LPAREN RPAREN block_stmt_func

    VAR  shift, and go to state 32


State 9

   27 declaration: FLOAT • VAR ASSIGN expr SEMICOLON
   30            | FLOAT • VAR SEMICOLON
   34 function_declaration: FLOAT • VAR LPAREN parameter_list RPAREN block_stmt_func
   37                     | FLOAT • VAR LPAREN RPAREN block_stmt_func

    VAR  shift, and go to state 33


State 10

   28 declaration: DOUBLE • VAR ASSIGN expr SEMICOLON
   31            | DOUBLE • VAR SEMICOLON
   35 function_declaration: DOUBLE • VAR LPAREN parameter_list RPAREN block_stmt_func
   38                     | DOUBLE • VAR LPAREN RPAREN block_stmt_func

    VAR  shift, and go to state 34


State 11

   43 if_statement: IF • LPAREN expr RPAREN stmt
   44             | IF • LPAREN expr RPAREN stmt ELSE stmt

    LPAREN  shift, and go to state 35


State 12

   42 while_statement: WHILE • LPAREN expr RPAREN stmt

    LPAREN  shift, and go to state 36


State 13

   24 print_statement: PRINT • expr SEMICOLON

    VAR         shift, and go to state 37
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 18

    function_call  go to state 19
    expr           go to state 38


State 14

   23 scan_statement: SCAN • expr SEMICOLON

    VAR         shift, and go to state 37
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 18

    function_call  go to state 19
    expr           go to state 39


State 15

   61 expr: LPAREN • INT RPAREN expr
   62     | LPAREN • FLOAT RPAREN expr
   63     | LPAREN • DOUBLE RPAREN expr
   64     | LPAREN • expr RPAREN

    VAR         shift, and go to state 37
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    INT         shift, and go to state 40
    FLOAT       shift, and go to state 41
    DOUBLE      shift, and go to state 42
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 18

    function_call  go to state 19
    expr           go to state 43


State 16

   20 block_stmt: LBRACE • $@1 stmt_list RBRACE

    $default  reduce using rule 19 ($@1)

    $@1  go to state 44


State 17

   10 stmt: SEMICOLON •

    $default  reduce using rule 10 (stmt)


State 18

   50 expr: MINUS • expr

    VAR         shift, and go to state 37
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 18

    function_call  go to state 19
    expr           go to state 45


State 19

   45 expr: function_call •

    $default  reduce using rule 45 (expr)


State 20

    2 function: function stmt •

    $default  reduce using rule 2 (function)


State 21

   18 stmt: block_stmt •

    $default  reduce using rule 18 (stmt)


State 22

   13 stmt: scan_statement •

    $default  reduce using rule 13 (stmt)


State 23

   12 stmt: print_statement •

    $default  reduce using rule 12 (stmt)


State 24

   15 stmt: assignment •

    $default  reduce using rule 15 (stmt)


State 25

   14 stmt: declaration •

    $default  reduce using rule 14 (stmt)


State 26

   32 declaration: function_declaration •

    $default  reduce using rule 32 (declaration)


State 27

   16 stmt: while_statement •

    $default  reduce using rule 16 (stmt)


State 28

   17 stmt: if_statement •

    $default  reduce using rule 17 (stmt)


State 29

   11 stmt: expr • SEMICOLON
   51 expr: expr • PLUS expr
   52     | expr • MINUS expr
   53     | expr • MULTIPLY expr
   54     | expr • DIVIDE expr
   55     | expr • LESS expr
   56     | expr • GREATER expr
   57     | expr • GREATEREQUAL expr
   58     | expr • LESSEQUAL expr
   59     | expr • NOTEQUAL expr
   60     | expr • EQUAL expr

    SEMICOLON     shift, and go to state 46
    PLUS          shift, and go to state 47
    MINUS         shift, and go to state 48
    MULTIPLY      shift, and go to state 49
    DIVIDE        shift, and go to state 50
    EQUAL         shift, and go to state 51
    NOTEQUAL      shift, and go to state 52
    LESSEQUAL     shift, and go to state 53
    GREATEREQUAL  shift, and go to state 54
    LESS          shift, and go to state 55
    GREATER       shift, and go to state 56


State 30

    4 function_call: VAR LPAREN • expr_list RPAREN

    VAR         shift, and go to state 37
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 18

    function_call  go to state 19
    expr_list      go to state 57
    expr           go to state 58


State 31

   25 assignment: VAR ASSIGN • expr SEMICOLON

    VAR         shift, and go to state 37
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 18

    function_call  go to state 19
    expr           go to state 59


State 32

   26 declaration: INT VAR • ASSIGN expr SEMICOLON
   29            | INT VAR • SEMICOLON
   33 function_declaration: INT VAR • LPAREN parameter_list RPAREN block_stmt_func
   36                     | INT VAR • LPAREN RPAREN block_stmt_func

    LPAREN     shift, and go to state 60
    SEMICOLON  shift, and go to state 61
    ASSIGN     shift, and go to state 62


State 33

   27 declaration: FLOAT VAR • ASSIGN expr SEMICOLON
   30            | FLOAT VAR • SEMICOLON
   34 function_declaration: FLOAT VAR • LPAREN parameter_list RPAREN block_stmt_func
   37                     | FLOAT VAR • LPAREN RPAREN block_stmt_func

    LPAREN     shift, and go to state 63
    SEMICOLON  shift, and go to state 64
    ASSIGN     shift, and go to state 65


State 34

   28 declaration: DOUBLE VAR • ASSIGN expr SEMICOLON
   31            | DOUBLE VAR • SEMICOLON
   35 function_declaration: DOUBLE VAR • LPAREN parameter_list RPAREN block_stmt_func
   38                     | DOUBLE VAR • LPAREN RPAREN block_stmt_func

    LPAREN     shift, and go to state 66
    SEMICOLON  shift, and go to state 67
    ASSIGN     shift, and go to state 68


State 35

   43 if_statement: IF LPAREN • expr RPAREN stmt
   44             | IF LPAREN • expr RPAREN stmt ELSE stmt

    VAR         shift, and go to state 37
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 18

    function_call  go to state 19
    expr           go to state 69


State 36

   42 while_statement: WHILE LPAREN • expr RPAREN stmt

    VAR         shift, and go to state 37
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 18

    function_call  go to state 19
    expr           go to state 70


State 37

    4 function_call: VAR • LPAREN expr_list RPAREN
   49 expr: VAR •

    LPAREN  shift, and go to state 30

    $default  reduce using rule 49 (expr)


State 38

   24 print_statement: PRINT expr • SEMICOLON
   51 expr: expr • PLUS expr
   52     | expr • MINUS expr
   53     | expr • MULTIPLY expr
   54     | expr • DIVIDE expr
   55     | expr • LESS expr
   56     | expr • GREATER expr
   57     | expr • GREATEREQUAL expr
   58     | expr • LESSEQUAL expr
   59     | expr • NOTEQUAL expr
   60     | expr • EQUAL expr

    SEMICOLON     shift, and go to state 71
    PLUS          shift, and go to state 47
    MINUS         shift, and go to state 48
    MULTIPLY      shift, and go to state 49
    DIVIDE        shift, and go to state 50
    EQUAL         shift, and go to state 51
    NOTEQUAL      shift, and go to state 52
    LESSEQUAL     shift, and go to state 53
    GREATEREQUAL  shift, and go to state 54
    LESS          shift, and go to state 55
    GREATER       shift, and go to state 56


State 39

   23 scan_statement: SCAN expr • SEMICOLON
   51 expr: expr • PLUS expr
   52     | expr • MINUS expr
   53     | expr • MULTIPLY expr
   54     | expr • DIVIDE expr
   55     | expr • LESS expr
   56     | expr • GREATER expr
   57     | expr • GREATEREQUAL expr
   58     | expr • LESSEQUAL expr
   59     | expr • NOTEQUAL expr
   60     | expr • EQUAL expr

    SEMICOLON     shift, and go to state 72
    PLUS          shift, and go to state 47
    MINUS         shift, and go to state 48
    MULTIPLY      shift, and go to state 49
    DIVIDE        shift, and go to state 50
    EQUAL         shift, and go to state 51
    NOTEQUAL      shift, and go to state 52
    LESSEQUAL     shift, and go to state 53
    GREATEREQUAL  shift, and go to state 54
    LESS          shift, and go to state 55
    GREATER       shift, and go to state 56


State 40

   61 expr: LPAREN INT • RPAREN expr

    RPAREN  shift, and go to state 73


State 41

   62 expr: LPAREN FLOAT • RPAREN expr

    RPAREN  shift, and go to state 74


State 42

   63 expr: LPAREN DOUBLE • RPAREN expr

    RPAREN  shift, and go to state 75


State 43

   51 expr: expr • PLUS expr
   52     | expr • MINUS expr
   53     | expr • MULTIPLY expr
   54     | expr • DIVIDE expr
   55     | expr • LESS expr
   56     | expr • GREATER expr
   57     | expr • GREATEREQUAL expr
   58     | expr • LESSEQUAL expr
   59     | expr • NOTEQUAL expr
   60     | expr • EQUAL expr
   64     | LPAREN expr • RPAREN

    RPAREN        shift, and go to state 76
    PLUS          shift, and go to state 47
    MINUS         shift, and go to state 48
    MULTIPLY      shift, and go to state 49
    DIVIDE        shift, and go to state 50
    EQUAL         shift, and go to state 51
    NOTEQUAL      shift, and go to state 52
    LESSEQUAL     shift, and go to state 53
    GREATEREQUAL  shift, and go to state 54
    LESS          shift, and go to state 55
    GREATER       shift, and go to state 56


State 44

   20 block_stmt: LBRACE $@1 • stmt_list RBRACE

    VAR         shift, and go to state 4
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    INT         shift, and go to state 8
    FLOAT       shift, and go to state 9
    DOUBLE      shift, and go to state 10
    IF          shift, and go to state 11
    WHILE       shift, and go to state 12
    PRINT       shift, and go to state 13
    SCAN        shift, and go to state 14
    LPAREN      shift, and go to state 15
    LBRACE      shift, and go to state 16
    SEMICOLON   shift, and go to state 17
    MINUS       shift, and go to state 18

    function_call         go to state 19
    stmt                  go to state 77
    block_stmt            go to state 21
    stmt_list             go to state 78
    scan_statement        go to state 22
    print_statement       go to state 23
    assignment            go to state 24
    declaration           go to state 25
    function_declaration  go to state 26
    while_statement       go to state 27
    if_statement          go to state 28
    expr                  go to state 29


State 45

   50 expr: MINUS expr •
   51     | expr • PLUS expr
   52     | expr • MINUS expr
   53     | expr • MULTIPLY expr
   54     | expr • DIVIDE expr
   55     | expr • LESS expr
   56     | expr • GREATER expr
   57     | expr • GREATEREQUAL expr
   58     | expr • LESSEQUAL expr
   59     | expr • NOTEQUAL expr
   60     | expr • EQUAL expr

    $default  reduce using rule 50 (expr)


State 46

   11 stmt: expr SEMICOLON •

    $default  reduce using rule 11 (stmt)


State 47

   51 expr: expr PLUS • expr

    VAR         shift, and go to state 37
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 18

    function_call  go to state 19
    expr           go to state 79


State 48

   52 expr: expr MINUS • expr

    VAR         shift, and go to state 37
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 18

    function_call  go to state 19
    expr           go to state 80


State 49

   53 expr: expr MULTIPLY • expr

    VAR         shift, and go to state 37
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 18

    function_call  go to state 19
    expr           go to state 81


State 50

   54 expr: expr DIVIDE • expr

    VAR         shift, and go to state 37
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 18

    function_call  go to state 19
    expr           go to state 82


State 51

   60 expr: expr EQUAL • expr

    VAR         shift, and go to state 37
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 18

    function_call  go to state 19
    expr           go to state 83


State 52

   59 expr: expr NOTEQUAL • expr

    VAR         shift, and go to state 37
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 18

    function_call  go to state 19
    expr           go to state 84


State 53

   58 expr: expr LESSEQUAL • expr

    VAR         shift, and go to state 37
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 18

    function_call  go to state 19
    expr           go to state 85


State 54

   57 expr: expr GREATEREQUAL • expr

    VAR         shift, and go to state 37
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 18

    function_call  go to state 19
    expr           go to state 86


State 55

   55 expr: expr LESS • expr

    VAR         shift, and go to state 37
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 18

    function_call  go to state 19
    expr           go to state 87


State 56

   56 expr: expr GREATER • expr

    VAR         shift, and go to state 37
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 18

    function_call  go to state 19
    expr           go to state 88


State 57

    4 function_call: VAR LPAREN expr_list • RPAREN
    6 expr_list: expr_list • COMMA expr

    RPAREN  shift, and go to state 89
    COMMA   shift, and go to state 90


State 58

    5 expr_list: expr •
   51 expr: expr • PLUS expr
   52     | expr • MINUS expr
   53     | expr • MULTIPLY expr
   54     | expr • DIVIDE expr
   55     | expr • LESS expr
   56     | expr • GREATER expr
   57     | expr • GREATEREQUAL expr
   58     | expr • LESSEQUAL expr
   59     | expr • NOTEQUAL expr
   60     | expr • EQUAL expr

    PLUS          shift, and go to state 47
    MINUS         shift, and go to state 48
    MULTIPLY      shift, and go to state 49
    DIVIDE        shift, and go to state 50
    EQUAL         shift, and go to state 51
    NOTEQUAL      shift, and go to state 52
    LESSEQUAL     shift, and go to state 53
    GREATEREQUAL  shift, and go to state 54
    LESS          shift, and go to state 55
    GREATER       shift, and go to state 56

    $default  reduce using rule 5 (expr_list)


State 59

   25 assignment: VAR ASSIGN expr • SEMICOLON
   51 expr: expr • PLUS expr
   52     | expr • MINUS expr
   53     | expr • MULTIPLY expr
   54     | expr • DIVIDE expr
   55     | expr • LESS expr
   56     | expr • GREATER expr
   57     | expr • GREATEREQUAL expr
   58     | expr • LESSEQUAL expr
   59     | expr • NOTEQUAL expr
   60     | expr • EQUAL expr

    SEMICOLON     shift, and go to state 91
    PLUS          shift, and go to state 47
    MINUS         shift, and go to state 48
    MULTIPLY      shift, and go to state 49
    DIVIDE        shift, and go to state 50
    EQUAL         shift, and go to state 51
    NOTEQUAL      shift, and go to state 52
    LESSEQUAL     shift, and go to state 53
    GREATEREQUAL  shift, and go to state 54
    LESS          shift, and go to state 55
    GREATER       shift, and go to state 56


State 60

   33 function_declaration: INT VAR LPAREN • parameter_list RPAREN block_stmt_func
   36                     | INT VAR LPAREN • RPAREN block_stmt_func

    INT     shift, and go to state 92
    FLOAT   shift, and go to state 93
    DOUBLE  shift, and go to state 94
    RPAREN  shift, and go to state 95

    type            go to state 96
    parameter_list  go to state 97


State 61

   29 declaration: INT VAR SEMICOLON •

    $default  reduce using rule 29 (declaration)


State 62

   26 declaration: INT VAR ASSIGN • expr SEMICOLON

    VAR         shift, and go to state 37
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 18

    function_call  go to state 19
    expr           go to state 98


State 63

   34 function_declaration: FLOAT VAR LPAREN • parameter_list RPAREN block_stmt_func
   37                     | FLOAT VAR LPAREN • RPAREN block_stmt_func

    INT     shift, and go to state 92
    FLOAT   shift, and go to state 93
    DOUBLE  shift, and go to state 94
    RPAREN  shift, and go to state 99

    type            go to state 96
    parameter_list  go to state 100


State 64

   30 declaration: FLOAT VAR SEMICOLON •

    $default  reduce using rule 30 (declaration)


State 65

   27 declaration: FLOAT VAR ASSIGN • expr SEMICOLON

    VAR         shift, and go to state 37
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 18

    function_call  go to state 19
    expr           go to state 101


State 66

   35 function_declaration: DOUBLE VAR LPAREN • parameter_list RPAREN block_stmt_func
   38                     | DOUBLE VAR LPAREN • RPAREN block_stmt_func

    INT     shift, and go to state 92
    FLOAT   shift, and go to state 93
    DOUBLE  shift, and go to state 94
    RPAREN  shift, and go to state 102

    type            go to state 96
    parameter_list  go to state 103


State 67

   31 declaration: DOUBLE VAR SEMICOLON •

    $default  reduce using rule 31 (declaration)


State 68

   28 declaration: DOUBLE VAR ASSIGN • expr SEMICOLON

    VAR         shift, and go to state 37
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 18

    function_call  go to state 19
    expr           go to state 104


State 69

   43 if_statement: IF LPAREN expr • RPAREN stmt
   44             | IF LPAREN expr • RPAREN stmt ELSE stmt
   51 expr: expr • PLUS expr
   52     | expr • MINUS expr
   53     | expr • MULTIPLY expr
   54     | expr • DIVIDE expr
   55     | expr • LESS expr
   56     | expr • GREATER expr
   57     | expr • GREATEREQUAL expr
   58     | expr • LESSEQUAL expr
   59     | expr • NOTEQUAL expr
   60     | expr • EQUAL expr

    RPAREN        shift, and go to state 105
    PLUS          shift, and go to state 47
    MINUS         shift, and go to state 48
    MULTIPLY      shift, and go to state 49
    DIVIDE        shift, and go to state 50
    EQUAL         shift, and go to state 51
    NOTEQUAL      shift, and go to state 52
    LESSEQUAL     shift, and go to state 53
    GREATEREQUAL  shift, and go to state 54
    LESS          shift, and go to state 55
    GREATER       shift, and go to state 56


State 70

   42 while_statement: WHILE LPAREN expr • RPAREN stmt
   51 expr: expr • PLUS expr
   52     | expr • MINUS expr
   53     | expr • MULTIPLY expr
   54     | expr • DIVIDE expr
   55     | expr • LESS expr
   56     | expr • GREATER expr
   57     | expr • GREATEREQUAL expr
   58     | expr • LESSEQUAL expr
   59     | expr • NOTEQUAL expr
   60     | expr • EQUAL expr

    RPAREN        shift, and go to state 106
    PLUS          shift, and go to state 47
    MINUS         shift, and go to state 48
    MULTIPLY      shift, and go to state 49
    DIVIDE        shift, and go to state 50
    EQUAL         shift, and go to state 51
    NOTEQUAL      shift, and go to state 52
    LESSEQUAL     shift, and go to state 53
    GREATEREQUAL  shift, and go to state 54
    LESS          shift, and go to state 55
    GREATER       shift, and go to state 56


State 71

   24 print_statement: PRINT expr SEMICOLON •

    $default  reduce using rule 24 (print_statement)


State 72

   23 scan_statement: SCAN expr SEMICOLON •

    $default  reduce using rule 23 (scan_statement)


State 73

   61 expr: LPAREN INT RPAREN • expr

    VAR         shift, and go to state 37
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 18

    function_call  go to state 19
    expr           go to state 107


State 74

   62 expr: LPAREN FLOAT RPAREN • expr

    VAR         shift, and go to state 37
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 18

    function_call  go to state 19
    expr           go to state 108


State 75

   63 expr: LPAREN DOUBLE RPAREN • expr

    VAR         shift, and go to state 37
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 18

    function_call  go to state 19
    expr           go to state 109


State 76

   64 expr: LPAREN expr RPAREN •

    $default  reduce using rule 64 (expr)


State 77

   21 stmt_list: stmt •

    $default  reduce using rule 21 (stmt_list)


State 78

   20 block_stmt: LBRACE $@1 stmt_list • RBRACE
   22 stmt_list: stmt_list • stmt

    VAR         shift, and go to state 4
    INT_VAL     shift, and go to state 5
    FLOAT_VAL   shift, and go to state 6
    DOUBLE_VAL  shift, and go to state 7
    INT         shift, and go to state 8
    FLOAT       shift, and go to state 9
    DOUBLE      shift, and go to state 10
    IF          shift, and go to state 11
    WHILE       shift, and go to state 12
    PRINT       shift, and go to state 13
    SCAN        shift, and go to state 14
    LPAREN      shift, and go to state 15
    LBRACE      shift, and go to state 16
    RBRACE      shift, and go to state 110
    SEMICOLON   shift, and go to state 17
    MINUS       shift, and go to state 18

    function_call         go to state 19
    stmt                  go to state 111
    block_stmt            go to state 21
    scan_statement        go to state 22
    print_statement       go to state 23
    assignment            go to state 24
    declaration           go to state 25
    function_declaration  go to state 26
    while_statement       go to state 27
    if_statement          go to state 28
    expr                  go to state 29


State 79

   51 expr: expr • PLUS expr
   51     | expr PLUS expr •
   52     | expr • MINUS expr
   53     | expr • MULTIPLY expr
   54     | expr • DIVIDE expr
   55     | expr • LESS expr
   56     | expr • GREATER expr
   57     | expr • GREATEREQUAL expr
   58     | expr • LESSEQUAL expr
   59     | expr • NOTEQUAL expr
   60     | expr • EQUAL expr

    MULTIPLY      shift, and go to state 49
    DIVIDE        shift, and go to state 50
    EQUAL         shift, and go to state 51
    NOTEQUAL      shift, and go to state 52
    LESSEQUAL     shift, and go to state 53
    GREATEREQUAL  shift, and go to state 54
    LESS          shift, and go to state 55
    GREATER       shift, and go to state 56

    $default  reduce using rule 51 (expr)


State 80

   51 expr: expr • PLUS expr
   52     | expr • MINUS expr
   52     | expr MINUS expr •
   53     | expr • MULTIPLY expr
   54     | expr • DIVIDE expr
   55     | expr • LESS expr
   56     | expr • GREATER expr
   57     | expr • GREATEREQUAL expr
   58     | expr • LESSEQUAL expr
   59     | expr • NOTEQUAL expr
   60     | expr • EQUAL expr
